@@ -1,12 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         WebService-Hatena-BookmarkCount
-version:      0.05
+version:      0.06
 version_from: lib/WebService/Hatena/BookmarkCount.pm
 installdirs:  site
 requires:
     Test::More:                    0
-    XML::TreePP:                   0.16
+    XML::TreePP:                   0.18
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
